src/assets/styles/components/_nav.scss
.nav {
  height: rem(38);
  margin-left: auto;
  margin-top: 0;
}

.nav .menu-toggle {
  background: var(--fl-buttonBgColor, var(--header-bg, transparent));
  border-radius: rem(3);
  color: var(--fl-buttonFgColor, var(--blue-900));
  height: 3rem(4);
  line-height: calc(0.7 * var(--fl-lineSpace-factor, 1));
  margin-right: rem(2);
  padding: rem(6) rem(12);
  position: relative;
  z-index: 20;

  &:hover {
    background: var(--fl-buttonFgColor, rgba(255, 255, 255, 0.5));
    color: var(--fl-buttonBgColor);
  }

  &:focus {
    background: var(--fl-buttonFgColor, var(--header-bg, transparent));
    box-shadow: 0 0 0 rem(2) var(--fl-buttonFgColor, var(--parent-bg)), 0 0 0 rem(4) var(--fl-buttonFgColor, var(--blue-900)), 0 0 0 rem(2) var(--fl-buttonFgColor, var(--blue-900)) inset;
    color: var(--fl-buttonBgColor);
  }

  &:active {
    background-color: var(--fl-buttongBgColor, var(--indigo-800));
    color: var(--fl-buttonFgColor, var(--white));
  }

  &[aria-expanded="true"] {
    color: var(--fl-buttonFgColor, var(--header-fg));

    &:hover {
      background: var(--fl-buttonFgColor, rgba(255, 255, 255, 0.3));
      color: var(--fl-buttonBgColor, var(--header-fg));
    }

    &:focus {
      background: var(--fl-buttonFgColor);
      box-shadow: 0 0 0 rem(2) var(--fl-buttonFgColor, var(--parent-bg)), 0 0 0 rem(4) var(--fl-buttonFgColor, var(--header-fg)), 0 0 0 rem(2) var(--fl-buttonFgColor, var(--header-fg)) inset;
      color: var(--fl-buttonBgColor, var(--white));
    }

    &:active {
      background: var(--fl-buttonBgColor, var(--indigo-200));
      color: var(--fl-buttonFgColor, var(--indigo-800));
    }
  }

  svg {
    display: inline-block;
    margin-right: rem(4);
  }
}

.nav .menu {
  background: var(--fl-bgColor, var(--indigo-800));
  box-shadow: 0 rem(20) rem(25) rem(-5) var(--fl-fgColor, rgba(0, 0, 0, 0.1)), 0 rem(10) rem(10) rem(-5) var(--fl-fgColor, rgba(0, 0, 0, 0.04));
  color: var(--fl-fgColor, var(--white));
  display: none;
  left: calc(-1 / 2 * var(--gutter));
  padding: rem(88) 0 rem(40);
  position: absolute;
  width: 100vw;
  z-index: 10;
}

.nav [aria-expanded="true"] + * {
  display: block;
}

.menu .menu-label {
  padding: 0 var(--gutter);
}

.menu ul {
  display: flex;
  flex-direction: column;
  list-style: none;
  padding: 0;
}

.menu li {
  padding: 0;

  &.submenu-parent--submenu-visible {
    border-bottom: rem(1) solid var(--fl-fgColor, black);

    button[data-parent="true"] {
      text-decoration: none;
    }
  }
}

.menu li ul {
  display: none;
  margin-top: 0;
}

.menu a,
.menu button {
  align-items: center;
  display: flex;
  font-family: var(--fl-font-family, var(--ff-display));
  font-weight: var(--fw-semibold);
  height: rem(50);
  padding: 0 var(--gutter);
  text-align: left;
  text-decoration: none;
  width: 100%;

  &:hover,
  &:focus {
    background: var(--fl-fgColor, var(--indigo-100));
    color: var(--fl-bgColor, var(--indigo-800));
  }
}

.menu a {
  &:hover,
  &:focus {
    background: var(--fl-linkColor, var(--indigo-100));
    color: var(--fl-bgColor, var(--indigo-800));
  }
}

.menu button {
  &:hover,
  &:focus {
    background: var(--fl-buttonFgColor, var(--indigo-100));
    color: var(--fl-buttonBgColor, var(--indigo-800));
  }
}

.menu a,
.menu a:active {
  color: var(--fl-linkColor, var(--fl-fgColor, var(--white)));
}

.menu button,
.menu button:active {
  background-color: var(--fl-buttonBgColor, var(--fl-fgColor, var(--white)));
  color: var(--fl-buttonFgColor, var(--fl-fgColor, var(--white)));
}

.menu [aria-current="page"],
.menu [data-parent="true"] {
  text-decoration: underline;
  text-decoration-color: var(--fl-linkColor, var(--yellow-200));
  text-decoration-thickness: rem(2);

  &:hover,
  &:focus {
    text-decoration-color: var(--fl-bgColor, var(--indigo-800));
  }
}

.menu button svg {
  display: inline-block;
  margin-left: rem(8);
}

.menu li ul a {
  background: var(--fl-linkColor, var(--fl-bgColor, var(--indigo-900)));
  font-weight: var(--fw-normal);
}

.menu li ul a[rel~="external"]::after,
.menu li ul a[href^="mailto:"]::after {
  background: currentColor;
  content: "";
  display: inline-block;
  height: 1.5em;
  margin-bottom: 0.125em;
  margin-left: 0.125em;
  mask-image: url('../images/external.svg');
  mask-position: center;
  mask-repeat: no-repeat;
  mask-size: 1.5em;
  width: 1.5em;
}

.page--404 {
  .nav .menu-toggle {
    color: var(--fl-fgColor, var(--header-fg));

    &:hover {
      background: var(--fl-fgColor, rgba(255, 255, 255, 0.3));
      color: var(--fl-bgColor, var(--header-fg));
    }

    &:focus {
      box-shadow: 0 0 0 rem(2) var(--fl-fgColor, var(--parent-bg)), 0 0 0 rem(4) var(--fl-fgColor, var(--header-fg)), 0 0 0 rem(2) var(--fl-fgColor, var(--header-fg)) inset;
      color: var(--fl-bgColor, var(--white));
    }

    &:active {
      background: var(--fl-fgColor, var(--indigo-200));
      color: var(--fl-bgColor, var(--indigo-800));
    }
  }
}

.page--home {
  .nav .menu-toggle {
    &:hover {
      background: var(--fl-fgColor, var(--indigo-200));
    }

    &:active {
      background: var(--fl-bgColor, var(--indigo-800));
    }

    &[aria-expanded="true"] {
      &:hover {
        background: var(--fl-fgColor, rgba(255, 255, 255, 0.3));
      }

      &:active {
        background: var(--fl-bgColor, var(--white));
      }
    }
  }
}
/* ... */

